c - crash     b - bug fix    e - enhancement    f - new feature  n - note

2.5.0
  f - added full support (server-scheduler-mom) for Cygwin (UIIP NAS of Belarus,
      uiip.bas-net.by)
  f - architecture and build system changes to support Cygwin (Igor Ilyenko, 
      UIIP Minsk)
  b - fixed EINPROGRESS in net_client.c. This signal appears every time of 
      connecting and requires individual processing. The old erroneous 
      processing brought to big network delay, especially on Cygwin.
  e - improved signal processing after connecting in client_to_svr and added own
      implementation of bindresvport for OS which lack it (Igor Ilyenko, 
      UIIP Minsk)
  f - created permission checking of Windows (Cygwin) users, using mkpasswd, 
      mkgroup and own functions IamRoot, IamUser (Yauheni Charniauski, 
      UIIP Minsk)
  f - created permission checking of submited jobs (Vikentsi Lapa, 
      UIIP Minsk)
  f - Added the --disable-daemons configure option for start server-sched-mom
      as Windows services, cygrunsrv.exe goes its into background 
      independently.
  e - Adapted output of Cygwin's diagnostic information (Yauheni 
      Charniauski, UIIP Minsk)
  b - Changed pbsd_main to call daemonize_server early only if 
      high_availability_mode is set.
  e - removed the very old A_ macros (patch provided by Simon Toth, CESNET z.s.p.o.)
  e - added new qmgr server attributes (clone_batch_size, clone_batch_delay)
      for controlling job cloning (Bugzilla #4)
  e - added new qmgr attribute (checkpoint_defaults) for setting default
      checkpoint values on Execution queues (Bugzilla #1)
  b - Merged revision 3268 from 2.4-fixes. removed block of code that broke 
      pbs_statjob for requested attributes
  e - print a more informative error if pbs_iff isn't found when trying to
      authenticate a client
  n - 01/18/2010. Merged 2.4.5 revisions 3268-3375. 
  e - added qmgr server attribute job_start_timeout, specifies timeout to be