@@ -518,6 +518,7 @@ struct job
   tlist_head ji_rejectdest; /* list of rejected destinations */
   struct job_array      *ji_arraystruct; /* pointer to job_array for this array */
   int  ji_is_array_template;    /* set to TRUE if this is a "template job" for a job array*/
+  int  ji_have_nodes_request; /* set to TRUE if node spec uses keyword nodes */
 #endif/* PBS_MOM */   /* END SERVER ONLY */
 
   /*
